# qdtech-s3-touch-lcd-3.5-xiaozhi-firmware

./: .gitignore  AGENTS.md  CMakeLists.txt  PATCHES.md  README_QDTECH_35.md  radio_example.json  sdkconfig.defaults  sdkconfig.fast-provisioning.defaults  sdkconfig.network-first.defaults  sdkconfig.qdtech-provisioning-production.defaults  sdkconfig.raw-beacon-fallback.defaults  sdkconfig.single-driver-apsta.defaults  sdkconfig.softap-channel6-ab.defaults  sdkconfig.softap-channel6-compat.defaults  sdkconfig.softap-channel6-native.defaults  sdkconfig.softap-rf.defaults  sdkconfig.wifi-rx-self-test.defaults  sdkconfig.wifi-sta-tx-self-test.defaults  sdkconfig.zodiac.defaults
components/nofrendo/: CMakeLists.txt  memguard.h  nofrendo.c  qdtech_nofrendo.h  qdtech_osd.c
components/nofrendo/libsnss/: libsnss.c
components/nofrendo/mappers/: map083.c  map198.c  map224.c
components/nofrendo/nes/: mmclist.c  nes.c  nes_ppu.c  nes_rom.c
docs/: CHANGELOG_QDTECH.md  CODEX_RULES.md  HANDOFF.md  HANDOFF_V1.8.4.md  NEXT_TASKS.md  PROJECT_STATUS.md  STABILITY_BASELINE.md  V180_ZODIAC_HANDOFF.md  V181_FAST_PROVISIONING_HANDOFF.md  V181_HISTORICAL_APP_RF_BOUNDARY_HANDOFF.md  V181_NETWORK_FIRST_BOOT_HANDOFF.md  V181_RAW_BEACON_FALLBACK_HANDOFF.md  V181_SINGLE_DRIVER_APSTA_HANDOFF.md  V181_SOFTAP_CHANNEL6_AB_HANDOFF.md  V181_STATELESS_SOFTAP_RF_HANDOFF.md  V181_WIFI_RX_SELF_TEST_HANDOFF.md  V181_WIFI_STA_TX_SELF_TEST_HANDOFF.md  V182_QDTECH_PROVISIONING_OTA_HANDOFF.md  XIAOZHI_MCP_HANDOFF.md
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  idf_component.yml  (+4 more)
(+133 files in other folders)
